Fix golangci-lint config and address issues
It turns out specifying any rules for revive turns off the default
ruleset, which unfornately means there is no way to modify one rule
without specifying all rules.

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,6 +1,8 @@
 issues:
   max-same-issues: 0
   exclude-use-default: 0
+  exclude:
+    - if-return
   exclude-rules:
     path: _test\.go
     linters:
@@ -19,6 +21,7 @@ linters:
     - errname
     - errorlint
     - exportloopref
+    - gocognit
     - gocritic
     - gofumpt
     - gosec
@@ -44,6 +47,9 @@ linters:
     - usestdlibvars
 
 linters-settings:
+  gocognit:
+    min-complexity: 10
+
   gocritic:
     enabled-tags:
       - diagnostic
@@ -79,9 +85,3 @@ linters-settings:
 
   revive:
     confidence: 0
-    rules:
-      - name: cognitive-complexity
-        disabled: false
-        arguments: [10]
-      - name: if-return
-        disabled: true
