Allow running tests + linting at once

--- a/tusk.yml
+++ b/tusk.yml
@@ -13,4 +13,12 @@ tasks:
 
   test:
     usage: Run unit tests
-    run: go test ./...
+    options:
+      all:
+        usage: run all tests
+        type: bool
+        short: a
+    run:
+      - when: all
+        task: lint
+      - go test ./...
