--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,13 +11,16 @@ permissions:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
         go-version:
           - '1.19'
           - '1.20'
           - '1.21'
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Go ${{ matrix.go-version }}
@@ -28,6 +31,8 @@ jobs:
         run: go build -v ./...
       - name: Test
         run: go test -v ./...
+      - name: Test -trimpath
+        run: go test -trimpath -v ./...
 
   lint:
     runs-on: ubuntu-latest
