--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Test
 
 on:
   push:
@@ -11,15 +11,16 @@ permissions:
 
 jobs:
   test:
+    name: Test
     strategy:
       matrix:
         os:
           - ubuntu-latest
           - windows-latest
         go-version:
-          - '1.19'
           - '1.20'
           - '1.21'
+          - '1.22'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -35,14 +36,15 @@ jobs:
         run: go test -trimpath -v ./...
 
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.22'
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.54.2
+          version: v1.57.2
