--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
   contents: read
@@ -18,9 +18,9 @@ jobs:
           - ubuntu-latest
           - windows-latest
         go-version:
-          - '1.21'
-          - '1.22'
-          - '1.23'
+          - "1.21"
+          - "1.22"
+          - "1.23"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -43,7 +43,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.23'
+          go-version: "1.23"
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
