--- a/tusk.yml
+++ b/tusk.yml
@@ -3,13 +3,17 @@ tasks:
     usage: Clean up and format the code
     run:
       - go mod tidy
-      - go run mvdan.cc/gofumpt@latest -l -w .
+      - go run github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v2.0.2 fmt
 
   lint:
     usage: Run static analysis
-    description: |
-      Run golangci-lint using the project configuration.
-    run: go run github.com/golangci/golangci-lint/cmd/golangci-lint@v1.62.2 run ./...
+    options:
+      fix:
+        usage: Fix linter issues
+        short: f
+        type: boolean
+        rewrite: --fix
+    run: go run github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v2.0.2 run ${fix}
 
   test:
     usage: Run unit tests
